--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="index.html">Ristorante Con Fusion</a>
+            <a class="navbar-brand mr-auto" href="index.html"><img src="img/logo.png" alt="logo" class="img-fluid" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -38,7 +38,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -81,7 +82,7 @@
             </div>
             <div class="col-12">
                 <div class="card card-body bg-light">
-                    <blockquote class="blockquote">
+                    <blockquote class="blockquote text-center">
                         <p >You better cut the pizza in four pieces because
                             I'm not hungry enough to eat six.</p>
                         <footer class="blockquote-footer">Yogi Berra,
@@ -149,6 +150,13 @@
                 </table>
             </div>
            </div>
+           <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
            <div class="col-12 col-sm-3">
 
            </div>
