--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
                         </ol>
                         <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
                         <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+                        <div class="button-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
         </div>
@@ -316,7 +324,17 @@
  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
  <script>
+     $(document).ready(()=>{
+         $('#mycarousel').carousel({interval:1000});
+         $('#carousel-pause').click(()=>{
+             $('mycarousel').carousel('pause');
+             
+         })
+         $('#carousel-play').click(()=>{
+             $('mycarousel').carousel('cycle');
 
+         })
+     })
  </script>
 </body>
 
