--- a/index.html
+++ b/index.html
@@ -217,14 +217,9 @@
                         </ol>
                         <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
                         <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
-                        <div class="button-group" id="carouselButton">
-                            <button class="btn btn-danger btn-sm" id="carousel-pause">
-                                <span class="fa fa-pause"></span>
+                            <button class="btn btn-danger btn-sm" id="carouselButton">
+                                <span class="fa fa-pause" id="caro-button"></span>
                             </button>
-                            <button class="btn btn-danger btn-sm" id="carousel-play">
-                                <span class="fa fa-play"></span>
-                            </button>
-                        </div>
                     </div>
                 </div>
         </div>
@@ -324,14 +319,25 @@
  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
  <script>
+             var x = 1;
      $(document).ready(()=>{
-         $('#mycarousel').carousel({interval:1000});
-         $('#carousel-pause').click(()=>{
-             $('mycarousel').carousel('pause');
+         $('#mycarousel').carousel({interval:300});
+         $('#carouselButton').click(()=>{
+             if( x % 2 == 0){
+                $('#mycarousel').carousel('cycle');
+                $('#caro-button').removeClass('fa-play')
+                $('#caro-button').addClass('fa-pause')
+                x++;
+             }else{
+                $('#mycarousel').carousel('pause');
+                $('#caro-button').removeClass('fa-pause')
+                $('#caro-button').addClass('fa-play');
+                x++
+             }
              
          })
          $('#carousel-play').click(()=>{
-             $('mycarousel').carousel('cycle');
+             $(this).addClass('#carousel-play')
 
          })
      })
