--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
             </ul>
             <span class="navbar-text">
-                <a href="#" data-toggle="modal" data-target="#loginModal"> <span class="fa fa-sign-in"></span>Login</a>
+                <!-- data-* is removed -->
+                <a href="#" id="loginLink"> <span class="fa fa-sign-in"></span>Login</a>
             </span>
             </div>
         </div>
@@ -75,7 +76,7 @@
         </div>
     </div>
     <!-- Reserve Modal -->
-    <div id="reservemodal" class="modal fade" role="dialog">
+    <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -170,7 +171,8 @@
                     <img src="img/logo.png" alt="" class="img-fluid" >
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <button href="#" role="button" class="btn btn-block btn-warning text-white" data-toggle="modal" data-target="#reservemodal"><strong>Reserve Table</strong></button>
+                    <!-- data-* is removed !! -->
+                    <button href="#" role="button" class="btn btn-block btn-warning text-white" id="reserveButton"><strong>Reserve Table</strong></button>
                 </div>
             </div>
         </div>
@@ -340,6 +342,17 @@
              $(this).addClass('#carousel-play')
 
          })
+        // Reseve form trigger!!
+         $("#reserveButton").click(()=>{
+
+             $('#reserveModal').modal('show')
+         })
+
+        //  Login form trigger !!
+        $("#loginLink").click(()=>{
+    
+            $('#loginModal').modal('show')
+})
      })
  </script>
 </body>
